Fix all tests